Time: 31 ms (55.52%) | Memory: 51.5 MB (54.41%) - LeetSync